Fixed incorrectly formatted layers and changed optimizer function to RMS and Sigmoid

--- a/cnn_classifier_2.ipynb
+++ b/cnn_classifier_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -82,10 +82,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num dogs:  257\n",
-      "num cats:  243\n",
-      "num dogs:  257\n",
-      "num cats:  243\n",
+      "num dogs:  242\n",
+      "num cats:  258\n",
+      "num dogs:  248\n",
+      "num cats:  252\n",
       "500\n",
       "500\n",
       "[250, 250]\n"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -184,8 +184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"Reshape:0\", shape=(3, 3, 3, 8), dtype=float32)\n",
-      "Tensor(\"Reshape_1:0\", shape=(3, 3, 8, 8), dtype=float32)\n"
+      "Tensor(\"Reshape_10:0\", shape=(3, 3, 3, 8), dtype=float32)\n",
+      "Tensor(\"Reshape_11:0\", shape=(3, 3, 8, 8), dtype=float32)\n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -257,15 +257,15 @@
     "\n",
     "weights = {\n",
     "    #5x5 convolution, 1 depth layer input, 96 depth layer outputs\n",
-    "    'wc1' : tf.Variable(tf.random_normal([input_wh['wc1'], input_wh['wc1'] , input_size['wc1'], num_filters['wc1']])),\n",
+    "    'wc1' : tf.Variable(tf.random_normal([filter_size['wc1'], filter_size['wc1'], input_size['wc1'], num_filters['wc1']])),\n",
     "    \n",
     "    'mp1' : 2,\n",
     "    \n",
-    "    'wc2' : tf.Variable(tf.random_normal([input_wh['wc2'] , input_wh['wc2'] , input_size['wc2'], num_filters['wc2']])),\n",
+    "    'wc2' : tf.Variable(tf.random_normal([filter_size['wc2'], filter_size['wc2'], input_size['wc2'], num_filters['wc2']])),\n",
     "    \n",
     "    'mp2' : 2,\n",
     "    \n",
-    "    'wc3' : tf.Variable(tf.random_normal([input_wh['wc3'], input_wh['wc3'], input_size['wc3'], num_filters['wc3']])),\n",
+    "    'wc3' : tf.Variable(tf.random_normal([filter_size['wc3'], filter_size['wc3'], input_size['wc3'], num_filters['wc3']])),\n",
     "    \n",
     "    'mp3' : 2,\n",
     "    \n",
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -388,8 +388,9 @@
    "source": [
     "pred = conv_net(x, weights, biases, keep_prob);\n",
     "\n",
-    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(pred, y));\n",
-    "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost);\n",
+    "cost = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(pred, y));\n",
+    "#optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost);\n",
+    "optimizer = tf.train.RMSPropOptimizer(learning_rate=learning_rate).minimize(cost);\n",
     "\n",
     "correct_prediction = tf.equal(tf.argmax(pred, 1), tf.argmax(y, 1));\n",
     "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32));\n",
@@ -399,11 +400,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "completed on batch  0\n",
+      "completed on batch  100\n",
+      "completed on batch  200\n",
+      "completed on batch  300\n",
+      "completed on batch  400\n",
+      "Training finished\n",
+      "Testing accuracy:  0.504\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as session:\n",
     "    session.run(init);\n",
@@ -415,10 +430,10 @@
     "        #print(batch_x.shape, batch_y.shape);\n",
     "        session.run(optimizer, feed_dict={x: batch_x, y:batch_y});\n",
     "        \n",
-    "        if batch_pos % 10 == 0:\n",
+    "        if batch_pos % 100 == 0:\n",
     "            print('completed on batch ', batch_pos);\n",
     "    \n",
-    "    print('Training finished');\n",
+    "    print('\\nTraining finished\\n');\n",
     "    \n",
     "    print('Testing accuracy: ', \\\n",
     "         session.run(accuracy, feed_dict={x: test_images, y:test_labels, keep_prob: 1}));\n",
