Added a Keras classifier

--- a/cnn_classifier_2.ipynb
+++ b/cnn_classifier_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -82,10 +82,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num dogs:  242\n",
-      "num cats:  258\n",
-      "num dogs:  248\n",
-      "num cats:  252\n",
+      "num dogs:  253\n",
+      "num cats:  247\n",
+      "num dogs:  244\n",
+      "num cats:  256\n",
       "500\n",
       "500\n",
       "[250, 250]\n"
@@ -161,7 +161,7 @@
     "\n",
     "n_input = max_size[0] * max_size[1]; #data input\n",
     "n_classes = 2; #total classes = 10\n",
-    "dropout = 0.75; #probability to keep units\n",
+    "dropout = 0.5; #probability to keep units\n",
     "\n",
     "x = tf.placeholder(tf.float32, [None, n_input, 3]);\n",
     "y = tf.placeholder(tf.float32, [None, n_classes]);\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -184,8 +184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"Reshape_10:0\", shape=(3, 3, 3, 8), dtype=float32)\n",
-      "Tensor(\"Reshape_11:0\", shape=(3, 3, 8, 8), dtype=float32)\n"
+      "Tensor(\"Reshape_20:0\", shape=(3, 3, 3, 8), dtype=float32)\n",
+      "Tensor(\"Reshape_21:0\", shape=(3, 3, 8, 8), dtype=float32)\n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -238,7 +238,8 @@
     "    'wc2' : 32,\n",
     "    'wc3' : 32,\n",
     "    'fc1' : 64,\n",
-    "    'out' : 6,\n",
+    "    'fc2' : 64,\n",
+    "    'out' : 1,\n",
     "}\n",
     "\n",
     "input_wh = {\n",
@@ -252,7 +253,8 @@
     "    'wc1' : 32,\n",
     "    'wc2' : 32,\n",
     "    'wc3' : 64,\n",
-    "    'fc1' : 6,\n",
+    "    'fc1' : 64,\n",
+    "    'fc2' : 1,\n",
     "}\n",
     "\n",
     "weights = {\n",
@@ -271,6 +273,8 @@
     "    \n",
     "    'fc1' : tf.Variable(tf.random_normal([input_wh['fc1'] * input_wh['fc1'] * input_size['fc1'], num_filters['fc1']])),\n",
     "    \n",
+    "    'fc2' : tf.Variable(tf.random_normal([input_size['fc2'], num_filters['fc2']])),\n",
+    "    \n",
     "    'out' : tf.Variable(tf.random_normal([input_size['out'], n_classes]))\n",
     "}\n",
     "\n",
@@ -287,13 +291,14 @@
     "    'bc2' : tf.Variable(tf.random_normal([num_filters['wc2']])),\n",
     "    'bc3' : tf.Variable(tf.random_normal([num_filters['wc3']])),\n",
     "    'fc1' : tf.Variable(tf.random_normal([num_filters['fc1']])),\n",
+    "    'fc2' : tf.Variable(tf.random_normal([num_filters['fc2']])),\n",
     "    'out' : tf.Variable(tf.random_normal([n_classes]))\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -352,9 +357,14 @@
     "    fc1 = tf.nn.relu(fc1);\n",
     "    print('fcon1  ', fc1.get_shape(), get_size(fc1));\n",
     "    \n",
+    "    fc2 = tf.reshape(fc1, [-1, weights['fc2'].get_shape().as_list()[0]]);\n",
+    "    fc2 = tf.add(tf.matmul(fc2, weights['fc2']), biases['fc2']);\n",
+    "    fc2 = tf.sigmoid(fc2);\n",
+    "    print('fconv2 ', fc2.get_shape(), get_size(fc2));\n",
+    "    \n",
     "    #output, class prediction\n",
-    "    matrx = tf.matmul(fc1, weights['out']);\n",
-    "    out = tf.add(matrx, biases['out'])\n",
+    "    out = tf.add(tf.matmul(fc2, weights['out']), biases['out'])\n",
+    "    #out = tf.sigmoid(fc2);\n",
     "    print('outp1  ', out.get_shape(), get_size(out));\n",
     "    \n",
     "    return out;"
@@ -362,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -380,7 +390,8 @@
       "conv3   (?, 63, 63, 64) 254016\n",
       "pool3   (?, 32, 32, 64) 65536\n",
       "relu3  (?, 32, 32, 64) 65536\n",
-      "fcon1   (?, 6) 6\n",
+      "fcon1   (?, 64) 64\n",
+      "fconv2  (?, 1) 1\n",
       "outp1   (?, 2) 2\n"
      ]
     }
@@ -400,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -414,8 +425,10 @@
       "completed on batch  200\n",
       "completed on batch  300\n",
       "completed on batch  400\n",
+      "\n",
       "Training finished\n",
-      "Testing accuracy:  0.504\n"
+      "\n",
+      "Testing accuracy:  0.482\n"
      ]
     }
    ],
@@ -436,7 +449,7 @@
     "    print('\\nTraining finished\\n');\n",
     "    \n",
     "    print('Testing accuracy: ', \\\n",
-    "         session.run(accuracy, feed_dict={x: test_images, y:test_labels, keep_prob: 1}));\n",
+    "         session.run(accuracy, feed_dict={x: test_images, y:test_labels, keep_prob: dropout}));\n",
     "\n",
     "\n",
     "    session.close();"
