result with: 3 layers ; sgd ; decay 1e-10 ;

--- a/keras_classifier.ipynb
+++ b/keras_classifier.ipynb
@@ -217,14 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#opt = SGD(lr=learning_rate, decay=decay_rate);\n",
-    "opt = 'adadelta';\n",
+    "opt = SGD(lr=learning_rate, decay=decay_rate);\n",
+    "#opt = 'adadelta';\n",
     "\n",
     "model.compile(loss='binary_crossentropy',\n",
     "              optimizer=opt,\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -269,105 +269,105 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "2048/2048 [==============================] - 69s - loss: 0.4959 - binary_accuracy: 0.7744 - val_loss: 0.4580 - val_binary_accuracy: 0.7852\n",
+      "2048/2048 [==============================] - 58s - loss: 0.3633 - binary_accuracy: 0.8477 - val_loss: 0.3520 - val_binary_accuracy: 0.8418\n",
       "Epoch 2/50\n",
-      "2048/2048 [==============================] - 70s - loss: 0.5019 - binary_accuracy: 0.7578 - val_loss: 0.4846 - val_binary_accuracy: 0.7578\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3816 - binary_accuracy: 0.8374 - val_loss: 0.3579 - val_binary_accuracy: 0.8472\n",
       "Epoch 3/50\n",
-      "2048/2048 [==============================] - 76s - loss: 0.4760 - binary_accuracy: 0.7749 - val_loss: 0.4692 - val_binary_accuracy: 0.7680\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3561 - binary_accuracy: 0.8521 - val_loss: 0.3447 - val_binary_accuracy: 0.8405\n",
       "Epoch 4/50\n",
-      "2048/2048 [==============================] - 79s - loss: 0.5020 - binary_accuracy: 0.7500 - val_loss: 0.4353 - val_binary_accuracy: 0.7871\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3737 - binary_accuracy: 0.8296 - val_loss: 0.3584 - val_binary_accuracy: 0.8438\n",
       "Epoch 5/50\n",
-      "2048/2048 [==============================] - 78s - loss: 0.4877 - binary_accuracy: 0.7710 - val_loss: 0.4389 - val_binary_accuracy: 0.8079\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3639 - binary_accuracy: 0.8457 - val_loss: 0.3494 - val_binary_accuracy: 0.8507\n",
       "Epoch 6/50\n",
-      "2048/2048 [==============================] - 70s - loss: 0.4582 - binary_accuracy: 0.7769 - val_loss: 0.4271 - val_binary_accuracy: 0.8115\n",
+      "2048/2048 [==============================] - 55s - loss: 0.3603 - binary_accuracy: 0.8398 - val_loss: 0.3473 - val_binary_accuracy: 0.8496\n",
       "Epoch 7/50\n",
-      "2048/2048 [==============================] - 60s - loss: 0.4653 - binary_accuracy: 0.7729 - val_loss: 0.4549 - val_binary_accuracy: 0.7710\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3664 - binary_accuracy: 0.8325 - val_loss: 0.3472 - val_binary_accuracy: 0.8462\n",
       "Epoch 8/50\n",
-      "2048/2048 [==============================] - 66s - loss: 0.4853 - binary_accuracy: 0.7734 - val_loss: 0.4270 - val_binary_accuracy: 0.8020\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3670 - binary_accuracy: 0.8359 - val_loss: 0.3533 - val_binary_accuracy: 0.8478\n",
       "Epoch 9/50\n",
-      "2048/2048 [==============================] - 71s - loss: 0.4613 - binary_accuracy: 0.7915 - val_loss: 0.4221 - val_binary_accuracy: 0.8120\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3837 - binary_accuracy: 0.8311 - val_loss: 0.3612 - val_binary_accuracy: 0.8408\n",
       "Epoch 10/50\n",
-      "2048/2048 [==============================] - 68s - loss: 0.4720 - binary_accuracy: 0.7744 - val_loss: 0.4243 - val_binary_accuracy: 0.8074\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3491 - binary_accuracy: 0.8555 - val_loss: 0.3598 - val_binary_accuracy: 0.8375\n",
       "Epoch 11/50\n",
-      "2048/2048 [==============================] - 67s - loss: 0.4711 - binary_accuracy: 0.7803 - val_loss: 0.4309 - val_binary_accuracy: 0.7920\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3514 - binary_accuracy: 0.8442 - val_loss: 0.3312 - val_binary_accuracy: 0.8501\n",
       "Epoch 12/50\n",
-      "2048/2048 [==============================] - 64s - loss: 0.4618 - binary_accuracy: 0.7788 - val_loss: 0.4280 - val_binary_accuracy: 0.8110\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3590 - binary_accuracy: 0.8423 - val_loss: 0.3554 - val_binary_accuracy: 0.8428\n",
       "Epoch 13/50\n",
-      "2048/2048 [==============================] - 72s - loss: 0.4411 - binary_accuracy: 0.7852 - val_loss: 0.4390 - val_binary_accuracy: 0.8011\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3611 - binary_accuracy: 0.8364 - val_loss: 0.3636 - val_binary_accuracy: 0.8380\n",
       "Epoch 14/50\n",
-      "2048/2048 [==============================] - 73s - loss: 0.4673 - binary_accuracy: 0.7764 - val_loss: 0.4114 - val_binary_accuracy: 0.8198\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3604 - binary_accuracy: 0.8408 - val_loss: 0.3417 - val_binary_accuracy: 0.8511\n",
       "Epoch 15/50\n",
-      "2048/2048 [==============================] - 63s - loss: 0.4465 - binary_accuracy: 0.7891 - val_loss: 0.4340 - val_binary_accuracy: 0.7933\n",
+      "2048/2048 [==============================] - 55s - loss: 0.3653 - binary_accuracy: 0.8452 - val_loss: 0.3485 - val_binary_accuracy: 0.8385\n",
       "Epoch 16/50\n",
-      "2048/2048 [==============================] - 67s - loss: 0.4429 - binary_accuracy: 0.7944 - val_loss: 0.4309 - val_binary_accuracy: 0.7998\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3567 - binary_accuracy: 0.8496 - val_loss: 0.3638 - val_binary_accuracy: 0.8374\n",
       "Epoch 17/50\n",
-      "2048/2048 [==============================] - 75s - loss: 0.4368 - binary_accuracy: 0.8022 - val_loss: 0.4123 - val_binary_accuracy: 0.8079\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3624 - binary_accuracy: 0.8320 - val_loss: 0.3429 - val_binary_accuracy: 0.8492\n",
       "Epoch 18/50\n",
-      "2048/2048 [==============================] - 66s - loss: 0.4599 - binary_accuracy: 0.7900 - val_loss: 0.4186 - val_binary_accuracy: 0.8018\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3691 - binary_accuracy: 0.8320 - val_loss: 0.3657 - val_binary_accuracy: 0.8398\n",
       "Epoch 19/50\n",
-      "2048/2048 [==============================] - 64s - loss: 0.4400 - binary_accuracy: 0.7998 - val_loss: 0.4169 - val_binary_accuracy: 0.8032\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3647 - binary_accuracy: 0.8345 - val_loss: 0.3344 - val_binary_accuracy: 0.8452\n",
       "Epoch 20/50\n",
-      "2048/2048 [==============================] - 65s - loss: 0.4601 - binary_accuracy: 0.7861 - val_loss: 0.4304 - val_binary_accuracy: 0.8050\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3488 - binary_accuracy: 0.8574 - val_loss: 0.3521 - val_binary_accuracy: 0.8380\n",
       "Epoch 21/50\n",
-      "2048/2048 [==============================] - 64s - loss: 0.4578 - binary_accuracy: 0.7803 - val_loss: 0.4146 - val_binary_accuracy: 0.8081\n",
+      "2048/2048 [==============================] - 57s - loss: 0.3640 - binary_accuracy: 0.8364 - val_loss: 0.3495 - val_binary_accuracy: 0.8452\n",
       "Epoch 22/50\n",
-      "2048/2048 [==============================] - 70s - loss: 0.4226 - binary_accuracy: 0.8076 - val_loss: 0.4016 - val_binary_accuracy: 0.8171\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3695 - binary_accuracy: 0.8350 - val_loss: 0.3349 - val_binary_accuracy: 0.8594\n",
       "Epoch 23/50\n",
-      "2048/2048 [==============================] - 73s - loss: 0.4276 - binary_accuracy: 0.7998 - val_loss: 0.4003 - val_binary_accuracy: 0.8242\n",
+      "2048/2048 [==============================] - 55s - loss: 0.3600 - binary_accuracy: 0.8384 - val_loss: 0.3270 - val_binary_accuracy: 0.8530\n",
       "Epoch 24/50\n",
-      "2048/2048 [==============================] - 70s - loss: 0.4476 - binary_accuracy: 0.7891 - val_loss: 0.4054 - val_binary_accuracy: 0.8120\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3612 - binary_accuracy: 0.8364 - val_loss: 0.3583 - val_binary_accuracy: 0.8398\n",
       "Epoch 25/50\n",
-      "2048/2048 [==============================] - 69s - loss: 0.4205 - binary_accuracy: 0.8052 - val_loss: 0.4358 - val_binary_accuracy: 0.8050\n",
+      "2048/2048 [==============================] - 55s - loss: 0.3528 - binary_accuracy: 0.8555 - val_loss: 0.3481 - val_binary_accuracy: 0.8390\n",
       "Epoch 26/50\n",
-      "2048/2048 [==============================] - 67s - loss: 0.4176 - binary_accuracy: 0.8091 - val_loss: 0.4030 - val_binary_accuracy: 0.8169\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3623 - binary_accuracy: 0.8389 - val_loss: 0.3475 - val_binary_accuracy: 0.8491\n",
       "Epoch 27/50\n",
-      "2048/2048 [==============================] - 68s - loss: 0.4277 - binary_accuracy: 0.8047 - val_loss: 0.3882 - val_binary_accuracy: 0.8191\n",
+      "2048/2048 [==============================] - 57s - loss: 0.3600 - binary_accuracy: 0.8369 - val_loss: 0.3471 - val_binary_accuracy: 0.8492\n",
       "Epoch 28/50\n",
-      "2048/2048 [==============================] - 67s - loss: 0.4350 - binary_accuracy: 0.8071 - val_loss: 0.4119 - val_binary_accuracy: 0.8101\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3504 - binary_accuracy: 0.8413 - val_loss: 0.3624 - val_binary_accuracy: 0.8438\n",
       "Epoch 29/50\n",
-      "2048/2048 [==============================] - 63s - loss: 0.4122 - binary_accuracy: 0.8130 - val_loss: 0.3944 - val_binary_accuracy: 0.8205\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3732 - binary_accuracy: 0.8389 - val_loss: 0.3459 - val_binary_accuracy: 0.8507\n",
       "Epoch 30/50\n",
-      "2048/2048 [==============================] - 59s - loss: 0.4208 - binary_accuracy: 0.8164 - val_loss: 0.3837 - val_binary_accuracy: 0.8203\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3505 - binary_accuracy: 0.8501 - val_loss: 0.3456 - val_binary_accuracy: 0.8467\n",
       "Epoch 31/50\n",
-      "2048/2048 [==============================] - 58s - loss: 0.4312 - binary_accuracy: 0.8042 - val_loss: 0.4185 - val_binary_accuracy: 0.8071\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3674 - binary_accuracy: 0.8340 - val_loss: 0.3395 - val_binary_accuracy: 0.8506\n",
       "Epoch 32/50\n",
-      "2048/2048 [==============================] - 60s - loss: 0.4061 - binary_accuracy: 0.8066 - val_loss: 0.3815 - val_binary_accuracy: 0.8268\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3426 - binary_accuracy: 0.8452 - val_loss: 0.3517 - val_binary_accuracy: 0.8405\n",
       "Epoch 33/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.4161 - binary_accuracy: 0.8052 - val_loss: 0.3992 - val_binary_accuracy: 0.8120\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3545 - binary_accuracy: 0.8403 - val_loss: 0.3421 - val_binary_accuracy: 0.8496\n",
       "Epoch 34/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.4305 - binary_accuracy: 0.7988 - val_loss: 0.3718 - val_binary_accuracy: 0.8303\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3690 - binary_accuracy: 0.8428 - val_loss: 0.3544 - val_binary_accuracy: 0.8482\n",
       "Epoch 35/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3923 - binary_accuracy: 0.8247 - val_loss: 0.3744 - val_binary_accuracy: 0.8345\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3457 - binary_accuracy: 0.8403 - val_loss: 0.3527 - val_binary_accuracy: 0.8433\n",
       "Epoch 36/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.4065 - binary_accuracy: 0.8218 - val_loss: 0.4031 - val_binary_accuracy: 0.8120\n",
+      "2048/2048 [==============================] - 55s - loss: 0.3600 - binary_accuracy: 0.8457 - val_loss: 0.3560 - val_binary_accuracy: 0.8452\n",
       "Epoch 37/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.4222 - binary_accuracy: 0.8110 - val_loss: 0.3858 - val_binary_accuracy: 0.8268\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3619 - binary_accuracy: 0.8311 - val_loss: 0.3280 - val_binary_accuracy: 0.8619\n",
       "Epoch 38/50\n",
-      "2048/2048 [==============================] - 57s - loss: 0.4044 - binary_accuracy: 0.8228 - val_loss: 0.3816 - val_binary_accuracy: 0.8159\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3712 - binary_accuracy: 0.8438 - val_loss: 0.3486 - val_binary_accuracy: 0.8516\n",
       "Epoch 39/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.4057 - binary_accuracy: 0.8188 - val_loss: 0.3901 - val_binary_accuracy: 0.8298\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3727 - binary_accuracy: 0.8428 - val_loss: 0.3554 - val_binary_accuracy: 0.8375\n",
       "Epoch 40/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.4014 - binary_accuracy: 0.8203 - val_loss: 0.3868 - val_binary_accuracy: 0.8232\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3521 - binary_accuracy: 0.8555 - val_loss: 0.3282 - val_binary_accuracy: 0.8589\n",
       "Epoch 41/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.4106 - binary_accuracy: 0.8130 - val_loss: 0.3783 - val_binary_accuracy: 0.8351\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3674 - binary_accuracy: 0.8413 - val_loss: 0.3629 - val_binary_accuracy: 0.8380\n",
       "Epoch 42/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3893 - binary_accuracy: 0.8203 - val_loss: 0.3763 - val_binary_accuracy: 0.8271\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3470 - binary_accuracy: 0.8506 - val_loss: 0.3544 - val_binary_accuracy: 0.8447\n",
       "Epoch 43/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.4142 - binary_accuracy: 0.8184 - val_loss: 0.3694 - val_binary_accuracy: 0.8335\n",
+      "2048/2048 [==============================] - 55s - loss: 0.3621 - binary_accuracy: 0.8354 - val_loss: 0.3333 - val_binary_accuracy: 0.8545\n",
       "Epoch 44/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3983 - binary_accuracy: 0.8276 - val_loss: 0.3931 - val_binary_accuracy: 0.8186\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3435 - binary_accuracy: 0.8452 - val_loss: 0.3413 - val_binary_accuracy: 0.8439\n",
       "Epoch 45/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3845 - binary_accuracy: 0.8286 - val_loss: 0.3629 - val_binary_accuracy: 0.8452\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3562 - binary_accuracy: 0.8447 - val_loss: 0.3634 - val_binary_accuracy: 0.8423\n",
       "Epoch 46/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.4028 - binary_accuracy: 0.8130 - val_loss: 0.3843 - val_binary_accuracy: 0.8288\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3636 - binary_accuracy: 0.8374 - val_loss: 0.3326 - val_binary_accuracy: 0.8604\n",
       "Epoch 47/50\n",
-      "2048/2048 [==============================] - 57s - loss: 0.3901 - binary_accuracy: 0.8291 - val_loss: 0.3716 - val_binary_accuracy: 0.8262\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3647 - binary_accuracy: 0.8418 - val_loss: 0.3430 - val_binary_accuracy: 0.8418\n",
       "Epoch 48/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3894 - binary_accuracy: 0.8315 - val_loss: 0.3679 - val_binary_accuracy: 0.8394\n",
+      "2048/2048 [==============================] - 56s - loss: 0.3773 - binary_accuracy: 0.8345 - val_loss: 0.3400 - val_binary_accuracy: 0.8535\n",
       "Epoch 49/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3967 - binary_accuracy: 0.8271 - val_loss: 0.3616 - val_binary_accuracy: 0.8439\n",
+      "2048/2048 [==============================] - 63s - loss: 0.3599 - binary_accuracy: 0.8462 - val_loss: 0.3540 - val_binary_accuracy: 0.8458\n",
       "Epoch 50/50\n",
-      "2048/2048 [==============================] - 56s - loss: 0.3980 - binary_accuracy: 0.8223 - val_loss: 0.3698 - val_binary_accuracy: 0.8374\n"
+      "2048/2048 [==============================] - 60s - loss: 0.3468 - binary_accuracy: 0.8472 - val_loss: 0.3525 - val_binary_accuracy: 0.8384\n"
      ]
     }
    ],
